welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:18: error: not found: value dessine
	dessine();
        ^PictureMono:22: error: not found: value dessine
	dessine();
        ^