welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {

def dessiner()
{
	baisseBrosse();
	leveBrosse();
}

def faireV()
{
	avance();
	dessiner();
	gauche();
	avance();
	droite();
	avance();
	dessine();
	avance();
	droite();
	avance();
	dessine();
}



}
